# escalonamento

./: .gitignore  Cargo.toml  README.md  melhores_ag.txt  melhores_grasp.txt  relatorio.txt
instances/: 1_50_1_1  1_50_1_10  1_50_1_11  1_50_1_12  1_50_1_13  1_50_1_14  1_50_1_15  1_50_1_16  1_50_1_17  1_50_1_18  1_50_1_19  1_50_1_2  1_50_1_20  1_50_1_21  1_50_1_22  1_50_1_23  1_50_1_24  1_50_1_25  1_50_1_26  1_50_1_27  1_50_1_28  1_50_1_29  1_50_1_3  1_50_1_30  1_50_1_31  1_50_1_32  1_50_1_33  1_50_1_34  1_50_1_35  1_50_1_36  1_50_1_37  1_50_1_38  1_50_1_39  1_50_1_4  1_50_1_40  1_50_1_41  1_50_1_42  1_50_1_43  1_50_1_44  1_50_1_45  (+10 more)
resultados/ag/1/: 1_50_1_1-0-200.0.95.0.0.0.005.csv  1_50_1_1-1-200.0.95.0.0.0.01.csv  1_50_1_1-10-200.0.99.0.1.0.005.csv  1_50_1_1-11-200.0.99.0.1.0.01.csv  1_50_1_1-12-200.0.99.1.0.0.005.csv  1_50_1_1-13-200.0.99.1.0.0.01.csv  1_50_1_1-14-200.0.99.1.1.0.005.csv  1_50_1_1-15-200.0.99.1.1.0.01.csv  1_50_1_1-16-400.0.95.0.0.0.005.csv  1_50_1_1-17-400.0.95.0.0.0.01.csv  1_50_1_1-18-400.0.95.0.1.0.005.csv  1_50_1_1-19-400.0.95.0.1.0.01.csv  1_50_1_1-2-200.0.95.0.1.0.005.csv  1_50_1_1-20-400.0.95.1.0.0.005.csv  1_50_1_1-21-400.0.95.1.0.0.01.csv  1_50_1_1-22-400.0.95.1.1.0.005.csv  1_50_1_1-23-400.0.95.1.1.0.01.csv  1_50_1_1-24-400.0.99.0.0.0.005.csv  1_50_1_1-25-400.0.99.0.0.0.01.csv  1_50_1_1-26-400.0.99.0.1.0.005.csv  1_50_1_1-3-200.0.95.0.1.0.01.csv  (+27 more)
scripts/: analise.r  download_aws.sh  executa_experimentos.py  executa_instancias.sh  gerar_configuracoes_ag.py  gerar_configuracoes_grasp.py  run.sh
src/: ag.rs  grasp.rs  instancia.rs  main.rs
(+238 files in other folders)
