[package]
name = "escalonamento"
description = "Algoritmos para do escalonamento de máquina única"
version = "0.0.1"
authors = ["Italo Silva <italo@maleldil.com>"]
repository = "https://github.com/oyarsa/escalonamento"
homepage = "https://github.com/oyarsa/escalonamento"
readme = "README.md"
keywords = ["scheduling", "single-machine", "heuristics", "grasp"]

[[bin]]
bench = false
path = "src/main.rs"
name = "escalonamento"

[profile.release]
debug = true

[dependencies]
rand = "*"
